# OpenGL-projects

./: README.md
Cellular_automata/: CMakeLists.txt  CMakeSettings.json  vcpkg.json
Cellular_automata/src/: Cellular_automata.cpp  Cellular_automata.hpp  GOL.frag  GOL.vert  GPU_Info.cpp
Chaotic_attractor/: CmakeLists.txt
Chaotic_attractor/shaders/: attractor.frag  attractor.vert
Chaotic_attractor/src/: 3D_attractor.cpp
Fractals/: CmakeLists.txt  Julia.c  Julia.frag  Julia.vert
Slime_mold/: Slime_mold.sln
Slime_mold/V1/: V1.frag  V1.vcxproj  V1.vert  main.cpp  scr_V1.frag  scr_V1.vert
Slime_mold/V2/: V2.vcxproj  slime.comp  slime.cpp  slime.frag  slime.hpp  slime.vert
ressources/: Materials.h  abstractions.c  abstractions.h  glDebug.h  loadModel.h  physics.cpp  physics.hpp  renderer.cpp  renderer.hpp
ressources/shaders/: fbo.frag  fbo.vert
